# Pynzor

./: Docs.md  LICENSE.md  Pynzor.spec  README.md  TODO.md  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yml
cli/: __init__.py  commands.py  config.yaml  main.py  options.py
cli/wordlists/: common-params.txt
docs/samples/: sample_report.html  sample_report.json
modules/: __init__.py  fuzzer.py  headers.py  scanner.py  sqli.py  subdomain.py  xss.py
output/: formatter.py  reporter.py
output/templates/: report.html.j2
tests/: conftest.py  test_fuzzer.py  test_headers.py  test_reporter.py  test_scanner.py  test_sqli.py  test_subdomain.py  test_xss.py
utils/: http_client.py  validators.py
wordlists/: common-dirs.txt  subdomains.txt
