[project]
name = "Pynzor"
version = "1.0.0"
description = "Web pentesting CLI - scan ports, fuzz directories, hunt headers, and probe for vulns"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pynzor", email = "pynzor@example.com"}
]
keywords = ["security", "pentesting", "web", "reconnaissance", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "dnspython>=2.6",
    "beautifulsoup4>=4.12",
    "pyyaml>=6",
    "jinja2>=3.1",
]
[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5",
]
[project.scripts]
# Expose the main entrypoint that prints the banner and invokes the Typer app.
Pynzor = "main:main"
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["."]
exclude = ["reports", "wordlists"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
[tool.coverage.run]
source = ["Pynzor"]
omit = ["tests/*", "*/conftest.py"]
[tool.pyright]
venv = ".venv"
